# PicoRX

./: .gitignore
FW/: CMakeLists.txt  periph_assignment.h  picorx.cpp  rx.cpp  ui.cpp  ui.h
FW/rx/: nco.pio  rx.cpp
FW/ui/: gc9a01a.cpp  gc9a01a.h  logo.cpp  logo.h  surface.h  ui.cpp  ui.h  ui_types.h
FW/ui/fonts/: font.h  font_Simple5x8.h  font_Smooth10x14.h
